--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div id="headergob"></div>
-  <div id="buzonhgo"></div>
+  <!-- <div id="buzonhgo"></div> -->
   <div id="root"></div>
 
   <link rel="stylesheet" type="text/css" href="https://cdn.hidalgo.gob.mx/componentes/buzon/buzon.css" />
