--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.hidalgo.gob.mx/transicion/headergob/headergob-1.0.0.css" />
   <link href="assets/css/main.css" rel="stylesheet" />
   <link rel="shortcut icon" type="image/x-icon" href="https://cdn.hidalgo.gob.mx/logo.png" />
+  <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+/>
+
   <title>Sistema DIF Hidalgo</title>
 </head>
 
